# bluepill_sensor

./: .gdbinit  .gitignore  Cargo.toml  LICENSE-MIT  README.md  build.sh  compile.sh  debug.sh  flash.sh  memory.x  pins_pcd8544  server.sh
.cargo/: config
examples/: .hello.rs.swp  hello.rs
res/kicad/: bluepill_ethernet  bluepill_ethernet-cache.lib  bluepill_ethernet-rescue.lib  bluepill_ethernet.bak  bluepill_ethernet.kicad_pcb  bluepill_ethernet.kicad_pcb-bak  bluepill_ethernet.net  bluepill_ethernet.pro  bluepill_ethernet.sch  bluepill_ethernet.xml  sym-lib-table
res/kicad.libs/: 93c46.lib  MagJack.mod  W5500.lib  WIZ850io.kicad_mod  WIZ850io.lib  bluepill_rogerclark
res/kicad/rescue-backup/: bluepill_ethernet-2018-03-30-21-34-15.pro  bluepill_ethernet-2018-03-30-21-34-15.sch  bluepill_ethernet-cache-2018-03-30-21-34-15.lib
src/: am2302.rs  bme280.rs  bmp280.rs  cnf.rs  data.rs  ds93c46.rs  io_utils.rs  lib.rs  main.rs  msg.rs  nb_ext.rs  palt.rs  platform.rs  props.rs  sht1x.rs  system.rs
src/module/: ecm.rs  em.rs  env.rs  mod.rs  nop.rs  ps.rs  solax.rs
src/module/solax/: bus.rs  data.rs  mod.rs
src/platform/: sntp.rs  subsystem.rs  subsystem_i2c.rs  subsystem_spi.rs
subtree.solax-modbus/src/: data.rs  lib.rs
