[package]
name = "bluepill_sensor"
version = "0.3.9"
authors = ["Michael Watzko <michael@watzko.de>"]
description = "Bluepill/stm32f103 with w5500 ethernet chip, OneWire interface and sensor_common communication"
keywords = ["arm", "cortex-m", "onewire", "ethernet"]
categories = ["embedded", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/kellerkindt/bluepill_sensor"

[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
lto = true
debug = false

[dependencies]
embedded-hal = "0.2.2"
byteorder = { version = "1.2.1", default-features = false }
nb = "0.1.1"
panic-halt = "0.2.0"
cortex-m-rt = "0.6.7"
void = {version = "1.0.2", default-features = false }
ads1x1x = "0.2.0"
cortex-m = "0.5.7"

# [dependencies.shared-bus]
# version = "0.1.4"
# features = ["cortexm"]


[dependencies.w5500]
path = "../w5500"

[dependencies.onewire]
path = "../onewire"

[dependencies.pcd8544]
path = "../pcd8544"

[dependencies.sensor_common]
path = "../sensor_common"

[dependencies.stm32f103xx-hal]
git = "https://github.com/japaric/stm32f103xx-hal.git"
rev = "da4de59"