[package]
name = "bluepill_sensor"
version = "0.4.2"
authors = ["Michael Watzko <michael@watzko.de>"]
description = "Bluepill/stm32f103 with w5500 ethernet chip, OneWire interface and sensor_common communication"
keywords = ["arm", "cortex-m", "onewire", "ethernet"]
categories = ["embedded", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/kellerkindt/bluepill_sensor"
edition = "2018"

[lib]
name = "bluepill_sensor"
path = "src/lib.rs"

[[bin]]
name = "bluepill_sensor"
path = "src/main.rs"

[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
lto = true
debug = false

[dependencies]
embedded-hal = "0.2.3"
byteorder = { version = "1.2.1", default-features = false }
nb = "0.1.2"
panic-persist = "0.2.1"
cortex-m-rt = "0.6.12"
void = {version = "1.0.2", default-features = false }
cortex-m = "0.6.2"
bitflags = "1.2.1"
ads1x1x = { version = "0.2.1", optional = true }
pcf857x = { version = "0.3.0", optional = true }
arrayvec = { version = "0.5.1", optional = true, default-features = false, features = ["array-sizes-129-255"] }

[dependencies.stm32f1xx-hal]
version = "0.6.0"
features = ["stm32f103"]

# [dependencies.shared-bus]
# version = "0.1.4"
# features = ["cortexm"]


[dependencies.w5500]
path = "../w5500"

[dependencies.onewire]
path = "../onewire"

[dependencies.pcd8544]
path = "../pcd8544"

[dependencies.sensor_common]
path = "../sensor_common"

# [dependencies.stm32f103xx-hal]
# git = "https://github.com/japaric/stm32f103xx-hal.git"
# rev = "da4de59"

[features]
default = ["board-rev-3-0"]
module-em = ["module-specified"]
module-ps = ["module-specified", "ads1x1x", "pcf857x", "arrayvec"]
module-specified = []
board-rev-2 = []
board-rev-3-0 = ["i2c2", "pcf857x"]
i2c2 = []
# this shall disable PC14/PC15 LEDs
rtc = []